--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Logs/
 *.csproj
 .vs/
 obj/
+Packages/packages-lock.json
+ProjectSettings/PackageManagerSettings.asset
+ProjectSettings/ProjectVersion.txt
