--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ obj/
 Packages/packages-lock.json
 ProjectSettings/PackageManagerSettings.asset
 ProjectSettings/ProjectVersion.txt
+UserSettings/EditorUserSettings.asset
